# CMakeSeries

./: .gitignore  README.md
Ep002/source/: CMakeLists.txt  main.cpp
HelloApp/source/: CMakeLists.txt  main.cpp
HelloApp/source/include/: operations.h
